[Adarsh] Add. logging properties

--- a/EmployeePayrollApp/src/main/resources/application.properties
+++ b/EmployeePayrollApp/src/main/resources/application.properties
@@ -4,3 +4,16 @@ spring.datasource.url=jdbc:mysql://localhost:3306/payroll_service
 spring.datasource.username=root
 spring.datasource.password=Adarsh@123
 
+# Lombok -->
+logging.file.name=application.log
+
+logging.level.root=WARN
+logging.level.org.springframework.web=WARN
+logging.level.org.hibernate=ERROR
+logging.level.com.bridgelabz=DEBUG
+
+# logging pattern for console and file
+logging.pattern.console=%d{yyyy-MM-dd HH:mm:ss.SSS} [%level] [%thread] [%logger{5}:%line] %msg%n
+# logging.pattern.file= %d{yyyy-MM-dd HH:mm:ss} [%thread] %-5level %logger{36} - %msg%
+# logging console to off: logging.pattern.console=
+# spring.main.banner-mode=off
