--- a/EmployeePayrollApp/pom.xml
+++ b/EmployeePayrollApp/pom.xml
@@ -64,6 +64,9 @@
             <artifactId>lombok</artifactId>
             <scope>provided</scope>
         </dependency>
+		<dependency> <groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter</artifactId>
+		</dependency>
     </dependencies>
 
 	<build>
