--- a/EmployeePayrollApp/src/main/resources/application.properties
+++ b/EmployeePayrollApp/src/main/resources/application.properties
@@ -1,3 +1,6 @@
+spring.profiles.active=dev
+
+environment=COMMON
 spring.application.name=EmployeePayrollApp
 spring.datasource.driver-class-name=com.mysql.jdbc.Driver
 spring.datasource.url=jdbc:mysql://localhost:3306/payroll_service
