--- a/EmployeePayrollApp/src/main/resources/application.properties
+++ b/EmployeePayrollApp/src/main/resources/application.properties
@@ -1,11 +1,18 @@
 spring.profiles.active=dev
 
 environment=COMMON
-spring.application.name=EmployeePayrollApp
-spring.datasource.driver-class-name=com.mysql.jdbc.Driver
-spring.datasource.url=jdbc:mysql://localhost:3306/payroll_service
-spring.datasource.username=root
+spring.jpa.hibernate.ddl-auto=update
+spring.datasource.url=jdbc:mysql://localhost:3306/payroll_db
+spring.datasource.username=Adarsh
 spring.datasource.password=Adarsh@123
+
+# Previous DATABASE Connection -->
+#spring.application.name=EmployeePayrollApp
+#spring.datasource.driver-class-name=com.mysql.jdbc.Driver
+#spring.datasource.url=jdbc:mysql://localhost:3306/payroll_service
+#spring.datasource.username=root
+#spring.datasource.password=Adarsh@123
+#                              <--
 
 # Lombok -->
 logging.file.name=application.log
