--- a/EmployeePayrollApp/src/main/resources/application.properties
+++ b/EmployeePayrollApp/src/main/resources/application.properties
@@ -1,10 +1,11 @@
 spring.profiles.active=dev
 
 environment=COMMON
+spring.application.name=EmployeePayrollApp
 spring.jpa.hibernate.ddl-auto=update
 spring.datasource.url=jdbc:mysql://localhost:3306/payroll_db
-spring.datasource.username=Adarsh
-spring.datasource.password=Adarsh@123
+spring.datasource.username=${PAYROLL_DB_USERNAME:Adarsh}
+spring.datasource.password=${PAYROLL_DB_PASSWORD:Adarsh@123}
 
 # Previous DATABASE Connection -->
 #spring.application.name=EmployeePayrollApp
